packages/next-swc/crates/core/tests/errors/server-actions/3/output.js
/* __next_internal_action_entry_do_not_use__  */ export const x = 1;